# weather-proxy

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: health.py  router.py  weather.py
app/core/: exceptions.py  logging.py  middleware.py
app/schemas/: health.py  weather.py
app/services/: cache_service.py  open_meteo_client.py  weather_service.py
charts/weather-proxy/: Chart.yaml  values.yaml
charts/weather-proxy/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
terraform/: ecr.tf  eks.tf  main.tf  variables.tf  vpc.tf
tests/: conftest.py
tests/integration/: test_health_endpoint.py  test_weather_endpoint.py
tests/unit/: test_cache_service.py  test_open_meteo_client.py  test_weather_service.py
